ags (3.6.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented lock-free ags-fx-playback
	* fixed missing call to ags_soundcard_lock() and ags_soundcard_unlock() in ags_devout.c
	* improved midi2xml_main.c to check valid file stream pointer

ags (3.6.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added some getter of AgsScrolledPiano
	* fixed AgsWindow delete-event callback to use AgsQuitDialog
	* improved ags_gstreamer_file.c to create microsoft windows compatible URI

ags (3.6.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed pthread remains

ags (3.6.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added some getter/setter to AgsPiano
	* minor improvements

ags (3.6.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added gstreamer environment variables for mingw64

ags (3.6.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing return value of ags_window_button_press_event()

ags (3.6.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed pthread remains

ags (3.6.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_fast_pitch_util.[ch]
	* implemented some get type functions of enum values
	* refactored ags_sf2_synth_util.c
	* refactored ags_sfz_synth_util.c

ags (3.6.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc
	* additional audio file formats of AgsExportSoundcard and AgsWaveExportDialog

ags (3.6.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GStreamer support
	* implemented AgsComplex support in ags_fourier_transform_util.[ch]
	* implemented some get type functions of enum values
	* improved the developer's manual
	* fixed AgsWaveExportDialog missing delete-event callback
	* minor improvements

ags (3.5.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]